--- a/src/views/Search/style.css
+++ b/src/views/Search/style.css
@@ -1,11 +1,12 @@
 .search{
-  display: flex;
-  height: 100vh;
-  justify-content: center;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .search--center{
+  height: 100vh;
   align-items: center;
 }
 
